[package]
name = "objserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
http-body-util = "0.1.0-rc.2" 
bytes = "1"
pretty_env_logger = "0.4"
clap = { version = "4.3.0", features = ["derive"] }
once_cell = "1.17.1"

[dev-dependencies]
